# Computing_final

./: .gitignore  API_README.md  README.md  Requirements.txt  main.py  pipeline_presentation.html  pipeline_presentation.qmd  pyproject.toml  setup.py  train_model.py  wine_prediction_prd (2).md  working_wine_notebook.ipynb
api/: api_fastapi.py
api/models/: README.md  feature_names.txt
data/: WineQT.csv
notebooks/: demo_pipeline.ipynb  sample_batch.json  sample_single.json  working_wine_notebook.ipynb
scripts/: batch_predict_api.py
tests/: test_API.py  test_features.py  test_preprocessing.ipynb  test_preprocessing.py
wine_predict/: data_loader.py  pipeline.py
wine_predict/features/: features.py
wine_predict/preprocessing/: __init__.py  base.py  data_loader.ipynb  scalers.py
