[project]
name = "computing-final"
version = "0.1.0"
description = "Wine Classification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "abstract>=2025.2.17.0",
    "asttokens>=3.0.1",
    "base>=0.0.0",
    "comm>=0.2.3",
    "fastapi>=0.124.4",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "record>=4.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "uvicorn>=0.38.0",
]
